--- a/src/internal/web/static/css/base.css
+++ b/src/internal/web/static/css/base.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+}
+
 /* =================== FlexBox ====================== */
 
 .flex {
@@ -69,7 +73,39 @@ a {
   margin: 30px 0;
 }
 
+.ml-20 {
+  margin-left: 20px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+/* 右寄せ */
+.mr {
+  margin: 0 0 0 auto;
+}
+
+.m-auto {
+  margin: 0 auto;
+}
+
+.pl-20 {
+  padding-left: 20px;
+}
+
 /* =================== font ====================== */
+
+.font-18 {
+  font-size: 17px;
+}
+
 .font-24 {
   font-size: 24px;
 }
+
+.bold {
+  font-weight: bold;
+}
+
+/* =================== font ====================== */
