--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -49,7 +49,8 @@
 
 .heading-right-area li {
   display: table-cell;
-  padding: 0 20px
+  padding: 4px 20px;
+  font-size: 20px;
 }
 
 .content-wrapper {
@@ -73,4 +74,9 @@
   margin-top: 30px;
   border: 1px solid #000;
   border-radius: 15px;
+}
+
+.content-left p {
+  font-size: 22px;
+  letter-spacing: 0.05em;
 }
