--- a/src/internal/web/static/css/base.css
+++ b/src/internal/web/static/css/base.css
@@ -7,12 +7,16 @@ body {
   margin: 0;
   font-family: 'Andale Mono','Sitka Heading','Avenir',sans-serif;
   color: var(--BLACK);
+  background-color: #fff;
   min-height: 100vh;
   width: 100%;
 }
 
 a {
   text-decoration: none;
+}
+a,a:hover,a:visited{
+  color: inherit;
 }
 
 ul {
@@ -34,8 +38,16 @@ ul {
   align-items: center;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .justify-center {
@@ -77,24 +89,66 @@ ul {
   margin-left: 20px;
 }
 
+.ml-30 {
+  margin-left: 30px;
+}
+
+.ml-100 {
+  margin-left: 100px;
+}
+
+.ml-120 {
+  margin-left: 120px;
+}
+
 .mr-20 {
   margin-right: 20px;
 }
+
+.mt-4 {
+  margin-top: 4px;
+}
+
+.mt-8 {
+  margin-top: 8px;
+}
+
+.mt-9 {
+  margin-top: 9px;
+}
+
+.mt-66 {
+  margin-top: 66px;
+}
+
 
 /* 右寄せ */
 .mr {
   margin: 0 0 0 auto;
 }
 
+.m-0 {
+  margin: 0;
+}
+
 .m-auto {
   margin: 0 auto;
 }
+
 
 .pl-20 {
   padding-left: 20px;
 }
 
 /* =================== font ====================== */
+
+.font-14 {
+  font-size: 14px;
+}
+
+.font-17 {
+  font-size: 17px;
+}
 
 .font-18 {
   font-size: 18px;
@@ -112,4 +166,28 @@ ul {
   font-weight: bold;
 }
 
-/* =================== font ====================== */
+.letter-01 {
+  letter-spacing: 0.1em;
+}
+
+/* =================== border ====================== */
+
+.border-none {
+  border: none;
+}
+
+.border-top {
+  border-top: 1px solid #000;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #000;
+}
+
+.border-right {
+  border-right: 1px solid #000;
+}
+
+.border-left {
+  border-left: 1px solid #000;
+}
