--- a/src/internal/web/static/css/header.css
+++ b/src/internal/web/static/css/header.css
@@ -1,9 +1,14 @@
 .header-wrapper {
+  width: 100%;
+  height: 13vh;
+  position: fixed;
+  z-index: 20;
+}
+
+.header {
   width: 97%;
   height: 10vh;
-
-  position: fixed;
-  margin: 10px;
+  margin-top: 10px;
   border-style: solid;
   border-top-width: thick;
   border-right-width: thin;
@@ -14,8 +19,9 @@
 .today-date {
   margin: 0 40px 0 auto;
   padding: 4px 12px;
-  border: 1px solid var(--WOOD);
-  border-radius: 12px;
+  border: none;
+  border-right: 1px solid var(--WOOD);
+  border-bottom: 1px solid var(--WOOD);
 }
 
 .header-link {
@@ -25,11 +31,52 @@
   border: 1px solid var(--WOOD);
 }
 
+/* アコーディオンメニュー */
+.acd-check{
+  display: none;
+}
+.acd-label{
+  margin-left: 30px;
+  font-size: 24px;
+  padding: 4px 4px;
+  border: 1px solid var(--WOOD);
+  display: block;
+}
+.acd-content{
+  position: absolute;
+  width: 123px;
+  top: 72px;
+  border-left: 1px solid var(--WOOD);
+  border-right: 1px solid var(--WOOD);
+  border-bottom: 1px solid var(--WOOD);
+  background-color: var(--WHITE);
+  height: 0;
+  opacity: 0;
+  margin-left: 30px;
+  padding: 0 10px;
+  transition: .5s;
+  visibility: hidden;
+  z-index: 30;
+
+}
+.acd-check:checked + .acd-label + .acd-content{
+  height: 95px;
+  opacity: 1;
+  padding: 10px;
+  visibility: visible;
+}
+
+.acd-content-link {
+  padding: 4px 12px;
+  border-radius: 8px;
+  background-color: var(--BURLYWOOD);
+}
+
 /* 現在時刻を点滅させる */
 .blinking{
 	-webkit-animation:blink 1.5s ease-in-out infinite alternate;
-    -moz-animation:blink 1.5s ease-in-out infinite alternate;
-    animation:blink 1.5s ease-in-out infinite alternate;
+  -moz-animation:blink 1.5s ease-in-out infinite alternate;
+  animation:blink 1.5s ease-in-out infinite alternate;
 }
 @-webkit-keyframes blink{
     0% {opacity:0;}
