--- a/src/internal/web/static/css/main.css
+++ b/src/internal/web/static/css/main.css
@@ -1,8 +1,16 @@
+/* =================== main ====================== */
+
 .main {
   padding-top: 13vh;
 }
 
-/* =================== index ====================== */
+/* =================== content上部 ====================== */
+
+.heading-wrapper {
+  width: 100%;
+  position: fixed;
+  z-index: 10;
+}
 
 .heading-over-area-wrapper {
   width: 100%;
@@ -16,10 +24,11 @@
 .heading-right-area-over {
   width: 80%;
   border: none;
-  border-left: 1px solid #000;;
+  border-left: 1px solid #000;
 }
 
 .heading-area-wrapper {
+  top: 20px;
   width: 100%;
   height: 6vh;
 }
@@ -53,6 +62,122 @@
   font-size: 20px;
 }
 
+.title-area-wrapper {
+  width: 100%;
+  height: 70px;
+}
+
+.title-area {
+  position: relative;
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 70px;
+  width: 30%;
+  height: 100%;
+  border: none;
+}
+.title-area:before {
+  content: '';
+  position: absolute;
+  left: 70%;
+  bottom: 0px;/*線の上下位置*/
+  display: inline-block;
+  width: 70%;/*線の長さ*/
+  height: 2px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+.title-area:after {
+  content: '';
+  position: absolute;
+  left: 30%;
+  top: 0px;/*線の上下位置*/
+  display: inline-block;
+  width: 70%;/*線の長さ*/
+  height: 2px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+
+.subject-to {
+  position: relative;
+  margin: 20px auto 0 auto;
+  width: 40%;
+  height: 100%;
+  padding: 0 16px;
+  border-radius: 16px;
+  background-color: #c4dcfd;
+  border-radius: 16px;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 5px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+.sharing-button-wrapper {
+  width: 100%;
+  height: 70px;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.sharing-button {
+  width: 220px;
+  height: 60px;
+  margin: 0 40px;
+  background-color: var(--OLDLACE);
+  line-height: 60px;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 8px;
+  position: relative;
+  transition: 0.3s;
+  overflow: hidden;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
+}
+
+.sharing-button::before {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  left: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+.sharing-button::after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  right: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+
+.sharing-button::before {
+  top: 0;
+}
+
+.sharing-button::after {
+  bottom: 0;
+}
+
+.sharing-button:hover::before {
+  transform: translateX(-100%);
+}
+
+.sharing-button:hover::after {
+  transform: translateX(100%);
+}
+
+/* =================== content ====================== */
+
 .content-wrapper {
   width: 100%;
   height: 100%;
@@ -60,12 +185,23 @@
 
 .content-left-area {
   width: 20%;
-  border: none;
-  border-right: 1px solid #000;
+  padding-top: 20px;
+}
+
+.select-schedule-left-area {
+  width: 20%;
+  padding-top: 66px;
+  padding-bottom: 66px;
+}
+
+.index-content-right-area {
+  width: 80%;
 }
 
 .content-right-area {
   width: 80%;
+  padding-top: 66px;
+  padding-bottom: 66px;
 }
 
 .content-left {
@@ -79,4 +215,146 @@
 .content-left p {
   font-size: 22px;
   letter-spacing: 0.05em;
+}
+
+.content-left-form {
+  width: 80%;
+}
+
+.form-wrapper {
+  width: 100%;
+}
+
+.input-calendar {
+  width: 70%;
+}
+
+.content-left-button {
+  width: 60%;
+  height: 50px;
+  margin-top: 30px;
+  margin-left: 30px;
+  border: none;
+  background-color: var(--SNOW);
+
+  line-height: 1;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 0px;
+  width: 200px;
+  height: 40px;
+  position: relative;
+  transition: 0.3s;
+  overflow: hidden;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.content-left-button::before {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  left: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+.content-left-button::after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  right: 0;
+  background-color: var(--WOOD);
+  transition: .3s;
+}
+
+.content-left-button::before {
+  top: 0;
+}
+
+.content-left-button::after {
+  bottom: 0;
+}
+
+.content-left-button:hover::before {
+  transform: translateX(-100%);
+}
+
+.content-left-button:hover::after {
+  transform: translateX(100%);
+}
+
+.select-time-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 65px;
+}
+.select-time-wrapper:before {
+  content: '';
+  position: absolute;
+  bottom:-8px;
+  left:5%;
+  width: 60%;
+  height: 1px;
+  background:#333;
+  transition: all .3s;
+}
+.select-time-wrapper::after{
+  content: '';
+  position: absolute;
+  bottom:-3px;
+  right:35%;
+  width: 15px;
+  height:1px;
+  background:#333;
+  transform: rotate(35deg);
+  transition: all .3s;
+}
+/*hoverした際の移動*/
+.select-time-wrapper:hover::before{
+    left:10%;
+}
+.select-time-wrapper:hover::after{
+    right:30%;
+}
+
+.select-time-hour-area {
+  width: 130px;
+}
+
+.select-time-hour {
+  height: 35px;
+  margin: 0 50px;
+  padding: 5px 8px;
+  border-radius: 8px;
+}
+
+.select-time-minute-area {
+  width: 50px;
+}
+
+.select-time-minute {
+  height: 35px;
+  margin: 0 30px;
+  padding: 5px 8px;
+  border-radius: 8px;
+}
+
+.select-time-button-area {
+  width: 150px;
+  margin-left: 80px;
+}
+
+.select-time-button {
+  width: 100%;
+  height: 50px;
+  margin: 0 10px;
+  padding: 5px 16px;
+  border: none;
+  border-radius: 8px;
+  font-size: 20px;
+  letter-spacing: 0.1em;
 }
