--- a/src/internal/web/template/schedule.html
+++ b/src/internal/web/template/schedule.html
@@ -1,4 +1,4 @@
-{{define "index"}}
+{{define "schedule"}}
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -11,16 +11,32 @@
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
-    <header class="header-wrapper bg-white flex items-center">
-      <div class="header-link bg-white">
-        <a>TOP</a>
-      </div>
-      <div class="header-link bg-white">
-        <a>SCHEDULE SHARING</a>
-      </div>
-      <div class="bg-white today-date font-24">
-        <span id="today" class="blinking"></span>
-
+    <header class="header-wrapper bg-white">
+      <div class="header m-auto flex items-center bg-snow">
+        <div class="header-link bg-white">
+          <a href="/index">TOP</a>
+        </div>
+        <!-- <div class="flex-col bg-white">
+          <input id="acd-check1" class="acd-check" type="checkbox">
+          <label class="acd-label" for="acd-check1">SCHEDULE</label>
+          <div class="acd-content flex-col text-center">
+            <a href="/schedule" class="acd-content-link letter-01 text-snow">SELECT</a>
+            <a href="/schedule" class="acd-content-link letter-01 text-snow mt-8">CREATE</a>
+            <a href="/schedule" class="acd-content-link letter-01 text-snow mt-8">UPDATE</a>
+          </div>
+        </div> -->
+        <div class="header-link bg-white">
+          <a href="/schedules">SCHEDULES</a>
+        </div>
+        <div class="header-link bg-white">
+          <a href="/sharing">SCHEDULE SHARING</a>
+        </div>
+        <div class="header-link bg-white">
+          <a href="/account">ACCOUNT</a>
+        </div>
+        <div class="bg-white today-date font-24">
+          <span id="today" class="blinking"></span>
+        </div>
       </div>
     </header>
 
@@ -30,7 +46,7 @@
           <div class="heading-left-area-over"></div>
           <div class="heading-right-area-over"></div>
         </div>
-        <div class="flex">
+        <div class="heading-area-wrapper flex">
           <div class="heading-left-area flex justify-center items-center">
             <p class="font-20 bold">2023/02/27</p>
           </div>
@@ -62,7 +78,7 @@
       </div>
 
       <div class="content-wrapper flex">
-        <div class="content-left-area flex-col">
+        <div class="select-schedule-left-area border-none border-right flex-col">
           <div class="items-center">
             <div class="content-left flex justify-center items-center m-auto">
               <p class="font-24">Masaru</p>
@@ -96,7 +112,11 @@
 
       </div>
     </main>
+
+
   </body>
   <script type="text/javascript" src="../js/today.js"></script>
+
+
 </html>
 {{end}}
