--- a/src/internal/web/template/signup.html
+++ b/src/internal/web/template/signup.html
@@ -11,45 +11,37 @@
 </head>
 <body>
   <main>
-    <div class="registration-wrapper flex-col ">
-
-      <div class="registration-image-wrapper registration-image">
-        <img src="../img/registration.jpg" alt="image on signup page">
+    <div class="registration-wrapper flex-col">
+      <div class="registration-top-area bg-snow flex">
+        <h2 class="title">SIGNUP</h2>
+        <div class="registration-link-wrapper">
+          <a href="/login" class="registration-link">既にアカウントをお持ちの方はこちら</a>
+        </div>
       </div>
+      <div class="image-area flex-col">
 
-      <div class="registration-form-wrapper bg-snow flex">
-          <div class="registration-form-area flex-col justify-center   items-center">
-              <form class="my-30 w-70">
-                <div class="input-area text-wood flex-col">
-                  <label for="name">USERNAME</label>
-                  <input type="text" name="username" placeholder="10文字以内で入力してください" maxlength="10" />
-                </div>
-                <div class="input-area text-wood flex-col">
-                  <label for="password">PASSWORD</label>
-                  <input type="text" name="password" placeholder="10文字以内で入力してください" maxlength="10" />
-                </div>
-                <div class="input-area text-wood flex-col">
-                  <label for="password-confirmation">PASSWORD CONFIRMATION</label>
-                  <input type="password" name="password-confirmation" placeholder="再確認のためもう一度入力してください" maxlength="10" />
-                </div>
-                <div class="input-area text-wood flex-col">
-                  <label for="e-mail">E-MAIL</label>
-                  <input type="text" name="e-mail" placeholder="e-mailアドレスを入力してください" />
-                </div>
-              </div>
-
-              <div class="registration-button-area">
-                <div class="flex-col justify-center items-center">
-                  <!-- <div class="form-title-wrapper"> -->
-                    <h2 class="form-title form-title-wrapper">SIGNUP</h2>
-                  <!-- </div> -->
-                  <button class="form-button text-white bg-burlywood">REGISTER</button>
-                  <a href="/login" class="registration-link text-wood">既にアカウントをお持ちの方はこちら</a>
-                </div>
-              </div>
-            </form>
-
+        <form class="signup-form-area m-auto">
+          <div class="input-area text-snow flex-col">
+            <label for="name">USERNAME</label>
+            <input type="text" name="username" placeholder="10文字以内で入力してください" maxlength="10" />
           </div>
+          <div class="input-area text-snow flex-col">
+            <label for="password">PASSWORD</label>
+            <input type="text" name="password" placeholder="10文字以内で入力してください" maxlength="10" />
+          </div>
+          <div class="input-area text-snow flex-col">
+            <label for="password-confirmation">PASSWORD CONFIRMATION</label>
+            <input type="password" name="password-confirmation" placeholder="再確認のためもう一度入力してください" maxlength="10" />
+          </div>
+          <div class="input-area text-snow flex-col">
+            <label for="e-mail">E-MAIL</label>
+            <input type="text" name="e-mail" placeholder="e-mailアドレスを入力してください" />
+          </div>
+          <div class="signup-button-area">
+            <button class="form-button button-saddlebrown">REGISTER</button>
+          </div>
+        </form>
+      </div>
     </div>
   </main>
 </body>
