--- a/src/internal/web/static/css/registration.css
+++ b/src/internal/web/static/css/registration.css
@@ -1,57 +1,127 @@
-
-
 .registration-wrapper {
   width: 100%;
   min-height: 100vh;
 }
 
-.registration-image-wrapper {
+.registration-top-area {
   width: 100%;
-  height: 40vh;
+  height: 15vh;
 }
-
-.registration-image {
-  filter: opacity(78%);
-}
-
-.registration-form-wrapper {
-  width: 100%;
-  height: 60vh;
-}
-
-.registration-image-wrapper img {
-  width: 100%;
+.title {
+  width: 40%;
   height: 100%;
-  object-fit: cover;
+  position: relative;
+  top: -30px;
+  left: 80px;
+  font-size: 70px;
+  font-weight: bold;
+  letter-spacing: 0.15em;
+
+  color: transparent;
+	background: #000;
+	text-shadow: 1px 1px 2px rgba( 195, 128, 41, 5);
+	background-clip: text;
+	-webkit-background-clip: text;
+}
+.title:before {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  left: 45%;
+  bottom: 40px;
+
+  width: 57%;
+  height: 2px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: black;
+}
+.title:after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  left: 18%;
+  top: 0px;
+
+  width: 57%;
+  height: 2px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: black;
+}
+.registration-link-wrapper {
+  width: 30%;
+  height: 30%;
+  font-size: 18px;
+  letter-spacing: 0.1em;
+  border: none;
+}
+.registration-link {
+  position: relative;
+  top: 50px;
+  left: 200px;
+  transition: 0.3s;
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.registration-link::after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 75%;
+  position: absolute;
+  border-radius: 12px;
+  right: 40px;
+  background-color: var(--DARKGREEN);
+  transition: .3s;
+}
+.registration-link::after{
+  top: 30px;
+}
+.registration-link:hover::after {
+  transform: translateX(50%);
 }
 
-.registration-form-area {
-  width: 50%;
-}
 
+.image-area {
+  width: 100%;
+  height: 70vh;
+  background: url("../img/registration.jpg");
+  opacity: 78%;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 10;
+}
+.signup-form-area {
+  width: 30%;
+  margin-top: 80px;
+}
+.login-form-area {
+  width: 30%;
+  margin-top: 120px;
+}
 .input-area {
   width: 90%;
-  margin: 15px 0;
 }
-
 .input-area label {
   text-align: left;
   margin: 15px 0 4px 20px;
   letter-spacing: 0.1em;
 }
-
 .input-area input {
   width: 100%;
   margin-bottom: 10px;
-  background: rgba(0,0,0,0.3);
+  font-size: 18px;
+  background-color: var(--SNOW);
+  opacity: 0.6;
+  color: var(--BLACK);
   border: none;
   outline: none;
   padding: 20px 8px;
   border: 1px solid var(--BEIGE);
-  font-size: 16px;
-  color: #fff;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-  border-radius: 20px;
+  border-radius: 8px;
   box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
   -webkit-transition: box-shadow .5s ease;
   -moz-transition: box-shadow .5s ease;
@@ -59,42 +129,76 @@
   -ms-transition: box-shadow .5s ease;
   transition: box-shadow .5s ease;
 }
-
-.registration-button-area {
-  width: 50%;
-}
-
 .input-area ::placeholder {
-  color: snow;
+  color: var(--BLACK);
   font-size: 17px;
 }
-
-.form-title {
-  font-size: 70px;
-  font-weight: bold;
-  letter-spacing: 0.15em;
-
-  color: transparent;
-	background: #000;
-	text-shadow: 1px 1px 2px rgba( 255, 255, 255, 5);
-	background-clip: text;
-	-webkit-background-clip: text;
+.signup-button-area {
+  width: 95%;
+  margin-top: 100px;
 }
-
+.login-button-area {
+  width: 95%;
+  margin-top: 280px;
+}
 .form-button {
+  width: 100%;
+  height: 60px;
+  position: relative;
   font-size: 24px;
   letter-spacing: 0.1em;
-  margin-top: 50px;
-  padding: 24px 60px;
+  line-height: 0.3;
   border: none;
-  border-radius: 15px;
+  border-radius: 3px;
+  text-decoration: none;
+  transition: 0.3s;
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
 }
-
-.registration-link {
+.form-button::before {
+  content: "";
   display: block;
-  width: 45%;
-  border-bottom: solid 1px var(--WOOD);
-  padding: 28px 4px 8px 4px;
-  margin: 30px auto;
-  text-align: center;
+  height: 2px;
+  width: 75%;
+  position: absolute;
+  border-radius: 12px;
+  top: 0;
+  left: 0;
+  background-color: var(--BEIGE);
+  transition: .3s;
+}
+.form-button::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 75%;
+  position: absolute;
+  border-radius: 12px;
+  right: 0;
+  background-color: var(--BEIGE);
+  transition: .3s;
+}
+.form-button::before {
+  top: 0;
+}
+.form-button::after {
+  bottom: 0;
+}
+.form-button:hover::before {
+  transform: translateX(-100%);
+}
+.form-button:hover::after {
+  transform: translateX(100%);
+}
+.button-darkgreen {
+  color: var(--SNOW);
+  background-color: var(--DARKGREEN);
+  opacity: 0.8;
+}
+.button-saddlebrown {
+  color: var(--SNOW);
+  background-color: var(--SADDLEBROWN);
+  opacity: 0.8;
 }
