[Add] スケジュールのシェアを行うページを追加

--- a/src/internal/web/template/login.html
+++ b/src/internal/web/template/login.html
@@ -15,7 +15,7 @@
       <div class="registration-top-area bg-snow flex">
         <h2 class="title">LOGIN</h2>
         <div class="registration-link-wrapper">
-          <a href="/login" class="registration-link">アカウントの登録はこちら</a>
+          <a href="/signup" class="registration-link">アカウントの登録はこちら</a>
         </div>
       </div>
       <div class="image-area flex-col">
