--- a/src/internal/web/template/update-schedule.html
+++ b/src/internal/web/template/update-schedule.html
@@ -14,19 +14,24 @@
   <body>
     <header class="header-wrapper bg-white">
       <div class="header m-auto flex items-center bg-snow">
-
-        <div class="header-link bg-white">
-          <a href="/index">TOP</a>
-        </div>
+        <a href="/index">
+          <div class="header-link bg-white">
+            TOP
+          </div>
+        </a>
         <div class="header-link bg-white">
           <a href="/schedules">SCHEDULES</a>
         </div>
-        <div class="header-link bg-white">
-          <a href="/sharing">SCHEDULE SHARING</a>
-        </div>
-        <div class="header-link bg-white">
-          <a href="/account">ACCOUNT</a>
-        </div>
+        <a href="/sharing/to">
+          <div class="header-link bg-white">
+            SCHEDULE SHARING
+          </div>
+        </a>
+        <a href="/account">
+          <div class="header-link bg-white">
+            ACCOUNT
+          </div>
+        </a>
         <div class="bg-white today-date font-24">
           <span id="today" class="blinking"></span>
         </div>
