--- a/src/internal/web/static/css/color.css
+++ b/src/internal/web/static/css/color.css
@@ -1,6 +1,7 @@
     :root {
   --BLACK: #141414;
   --RED: #ff0000;
+  --DARKRED: #bb2121;
   --WHITE: #ffffff;
   --WOOD: rgb(195, 128, 41);
   --BURLYWOOD: rgb(222 184 135);
@@ -10,6 +11,7 @@
   --SKYBLUE: #63A5F2;
   --SADDLEBROWN: #8b4513;
   --DARKGREEN: #006400;
+  --DIMGREY: #696969;
 }
 
 .bg-white {
@@ -56,6 +58,10 @@
   color: var(--RED);
 }
 
+.text-darkred {
+  color: var(--DARKRED);
+}
+
 .text-snow {
   color: var(--SNOW);
 }
@@ -66,4 +72,8 @@
 
 .text-skyblue {
   color: var(--SKYBLUE);
+}
+
+.text-dimgrey {
+  color: var(--DIMGREY);
 }
