--- a/src/internal/web/template/create-schedule.html
+++ b/src/internal/web/template/create-schedule.html
@@ -14,30 +14,24 @@
   <body>
     <header class="header-wrapper bg-white">
       <div class="header m-auto flex items-center bg-snow">
-
-        <div class="header-link bg-white">
-          <a href="/index">TOP</a>
-        </div>
-
-        <!-- <div class="flex-col bg-white">
-          <input id="acd-check1" class="acd-check" type="checkbox">
-          <label class="acd-label" for="acd-check1">SCHEDULE</label>
-          <div class="acd-content flex-col text-center">
-            <a href="/schedule/" class="acd-content-link letter-01 text-snow">SELECT</a>
-            <a href="/schedule/create" class="acd-content-link letter-01 text-snow mt-8">CREATE</a>
-            <a href="/schedule/update" class="acd-content-link letter-01 text-snow mt-8">UPDATE</a>
+        <a href="/index">
+          <div class="header-link bg-white">
+            TOP
           </div>
-        </div> -->
-
+        </a>
         <div class="header-link bg-white">
           <a href="/schedules">SCHEDULES</a>
         </div>
-        <div class="header-link bg-white">
-          <a href="/sharing">SCHEDULE SHARING</a>
-        </div>
-        <div class="header-link bg-white">
-          <a href="/account">ACCOUNT</a>
-        </div>
+        <a href="/sharing/to">
+          <div class="header-link bg-white">
+            SCHEDULE SHARING
+          </div>
+        </a>
+        <a href="/account">
+          <div class="header-link bg-white">
+            ACCOUNT
+          </div>
+        </a>
         <div class="bg-white today-date font-24">
           <span id="today" class="blinking"></span>
         </div>
