--- a/src/internal/web/template/update-schedule.html
+++ b/src/internal/web/template/update-schedule.html
@@ -147,7 +147,7 @@
 
 
   </body>
-  <script type="text/javascript" src="../js/today.js"></script>
+  <script type="text/javascript" src="../js/now.js"></script>
   <script src="../js/calendar.js"></script>
 
 </html>
