--- a/src/internal/web/template/index.html
+++ b/src/internal/web/template/index.html
@@ -72,7 +72,7 @@
 
 
   </body>
-  <script type="text/javascript" src="../js/today.js"></script>
+  <script type="text/javascript" src="../js/now.js"></script>
   <script src="../js/calendar.js"></script>
 
 </html>
