--- a/src/internal/web/template/schedule.html
+++ b/src/internal/web/template/schedule.html
@@ -112,7 +112,7 @@
 
 
   </body>
-  <script type="text/javascript" src="../js/today.js"></script>
+  <script type="text/javascript" src="../js/now.js"></script>
 
 
 </html>
