--- a/src/internal/web/template/sharing-from-someone.html
+++ b/src/internal/web/template/sharing-from-someone.html
@@ -46,12 +46,12 @@
         </div>
         <div class="sharing-button-wrapper mr flex">
           <a href="/sharing/to"  class="letter-01">
-            <div class="sharing-button bg-oldlace text-center">
+            <div class="title-area-button bg-oldlace text-center">
               TO SOMEONE
             </div>
           </a>
           <a href="/sharing/from"  class="letter-01">
-            <div class="sharing-button bg-oldlace text-center">
+            <div class="title-area-button bg-oldlace text-center">
               FROM SOMEONE
             </div>
           </a>
@@ -95,7 +95,7 @@
 
 
   </body>
-  <script type="text/javascript" src="../js/today.js"></script>
+  <script type="text/javascript" src="../js/now.js"></script>
   <script src="../js/calendar.js"></script>
 
 </html>
