[Add] アカウント情報を追加

--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -44,12 +44,11 @@
           <h1 class="text-center">ACCOUNT PAGE</h1>
         </div>
         <div class="sharing-button-wrapper mr flex">
-
-          <div class="title-area-button bg-oldlace text-center">
-            <button id="icon-list-display-button" class="letter-01 font-17 bg-oldlace">
+          <button id="icon-list-display-button" class="title-area-button bg-oldlace text-center">
+            <div class="letter-01 font-17 bg-oldlace">
               CHANGE ICON
-            </button>
-          </div>
+            </div>
+          </button>
           <a href="/sharing/to"  class="letter-01">
             <div class="title-area-button bg-oldlace text-center">
               CHANGE USERNAME
@@ -72,93 +71,151 @@
             <button class="content-left-button">CREATE</button>
             <button class="content-left-button">UPDATE</button>
           </form>
-
         </div>
 
-
-        <div class="account-content-right-area bg-red">
+        <div class="account-content-right-area bg-snow">
+          <!-- アイコンリスト表示 -->
           <div id="icon-list">
-              <form class="icon-list-wrapper flex-col bg-white">
-                <div class="icon-row flex">
-                  <button class="icon">
-                    <img src="../icon/icon01.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon02.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon03.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon04.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon05.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon06.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon07.svg" alt="" class="icon-size">
-                  </button>
-                </div>
+            <form class="icon-list-wrapper flex-col bg-white">
+              <div class="icon-row flex">
+                <button class="icon">
+                  <img src="../icon/icon01.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon02.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon03.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon04.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon05.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon06.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon07.svg" alt="" class="icon-size">
+                </button>
+              </div>
 
-                <div class="icon-row flex">
-                  <button class="icon">
-                    <img src="../icon/icon08.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon09.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon10.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon11.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon12.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon13.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon14.svg" alt="" class="icon-size">
-                  </button>
-                </div>
-                <div class="icon-row flex">
-                  <button class="icon">
-                    <img src="../icon/icon15.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon16.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon17.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon18.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon19.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon20.svg" alt="" class="icon-size">
-                  </button>
-                  <button class="icon">
-                    <img src="../icon/icon21.svg" alt="" class="icon-size">
-                  </button>
-                </div>
-              </form>
+              <div class="icon-row flex">
+                <button class="icon">
+                  <img src="../icon/icon08.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon09.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon10.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon11.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon12.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon13.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon14.svg" alt="" class="icon-size">
+                </button>
+              </div>
+              <div class="icon-row flex">
+                <button class="icon">
+                  <img src="../icon/icon15.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon16.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon17.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon18.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon19.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon20.svg" alt="" class="icon-size">
+                </button>
+                <button class="icon">
+                  <img src="../icon/icon21.svg" alt="" class="icon-size">
+                </button>
+              </div>
+            </form>
           </div>
 
-          <div class="">
+          <div class="account-wrapper m-auto flex">
+            <div class="account-content-left flex-col">
+              <div class="my-icon">
+                <img src="../icon/icon20.svg" alt="">
+              </div>
+              <div class="my-name">
+                <label for="name">USERNAME</label>
+                <div class="name-box">
+                  <p class="font-24">あいうえおかきくけこ</p>
+                </div>
+              </div>
+            </div>
+            <div class="account-content-right">
+              <div class="my-info-wrapper">
+                <div class="my-info">
+                  <label for="number">SHARERS</label>
+                  <div class="info-box flex">
+                    <div class="detail-box">
+                      <p>共有している人数</p>
+                    </div>
+                    <div class="result-box">
+                      <p>02 人</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="my-info">
+                  <label for="number">SHARERS</label>
+                  <div class="info-box flex">
+                    <div class="detail-box">
+                      <p>共有されている人数</p>
+                    </div>
+                    <div class="result-box">
+                      <p>02 人</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="my-info">
+                  <label for="number">REGISTRATIONS</label>
+                  <div class="info-box flex">
+                    <div class="detail-box">
+                      <p>free-time登録件数</p>
+                    </div>
+                    <div class="result-box">
+                      <p>02 件</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="my-info">
+                  <label for="number">PASSWORD RESET</label>
+                  <div class="info-box">
+                    <div class="detail-box-password flex-col">
+                      <p>パスワードをお忘れの方はこちら</p>
+                      <a href="/account/reset">
+                        <div class="title-area-button bg-beige text-center">
+                          PASSWORD RESET
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
+            </div>
           </div>
         </div>
-
       </div>
-
     </main>
 
 
