--- a/src/internal/web/static/css/account.css
+++ b/src/internal/web/static/css/account.css
@@ -1,3 +1,10 @@
+.account-content-right-area {
+  width: 70%;
+  height: 60vh;
+  margin: 100px auto 0 auto;
+  box-shadow: 7px 7px 20px rgba(0,0,0,.3);
+}
+
 /* icon */
 #icon-list-display-button {
   border: none;
@@ -8,13 +15,16 @@
   position: absolute;
   top: 200px;
   left: 400px;
-  transition: opacity 200ms;
+  display: none;
+  z-index: 10;
 }
+/* #icon-list button,img:hover {
+  cursor: pointer;
+	transform: scale(1.1, 1.1);
+} */
 #icon-list.is-hidden {
-  opacity: 0;
-  pointer-events: none;
+  display: block;
 }
-
 .icon-list-wrapper {
   width: 97%;
   height: 95%;
@@ -29,7 +39,7 @@
         var(--bg-gradient);
     background-repeat: no-repeat;
     background-size: 100% 2px, 2px 100%, 100% 2px, 2px 100%;
-    background-position: left top 10px, right 10px top, left bottom 10px, left 10px top;
+    background-position: left top 15px, right 15px top, left bottom 15px, left 15px top;
 }
 .icon-row {
   width: 100%;
@@ -45,10 +55,11 @@
   border-radius: 50%;
   margin: 0 10px;
   position: relative;
+  box-shadow: 5px 5px 5px rgba(0,0,0,.3);
 }
 .icon:hover {
 	cursor: pointer;
-	transform: scale(1.1, 1.1);
+	transform: scale(1.15, 1.15);
 }
 .icon-size {
   width: 131px;
@@ -59,8 +70,156 @@
   transform: translate(-50%, -50%);
 }
 
+/* account information */
+.account-wrapper {
+  width: 100%;
+  height: 60vh;
+}
 
+.account-content-left {
+  width: 60%;
+}
+.my-icon {
+  width: 256px;
+  height: 256px;
+  border-radius: 50%;
+  margin: 55px auto;
+  box-shadow: 7px 7px 10px rgba(0,0,0,.3);
+  z-index: 1;
+}
+.my-icon img {
+  width: 265px;
+  height: 265px;
+  position: absolute;
+  top: 55.2%;
+  left: 38.2%;
+  transform: translate(-50%, -50%);
+}
+.my-name {
+  position: relative;
+  width: 256px;
+  height: 100px;
+  margin-left: 60px;
+  letter-spacing: 0.1em;
+}
+.my-name::after {
+  content: '';
+  position: absolute;
+  left: 23%;
+  top: 17px;/*線の上下位置*/
+  display: inline-block;
+  width: 38%;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 1px;/*線の丸み*/
+}
+.name-box {
+  width: 100%;
+  height: 40%;
+  margin-top: 10px;
+  margin-left: 20px;
+  line-height: 10%;
+  padding: 10px 15px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,.3);
+}
 
-/* .account-content-right-area {
-
-} */
+.account-content-right {
+  width: 100%;
+  height: 100%;
+}
+.my-info-wrapper {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
+.my-info {
+  position: relative;
+  width: 100%;
+  height: 64px;
+  margin-top: 30px;
+}
+.my-info:nth-child(1) {
+  margin-top: 50px;
+}
+.my-info:nth-child(1):after {
+  content: '';
+  position: absolute;
+  left: 12%;
+  top: 19px;/*線の上下位置*/
+  display: inline-block;
+  width: 18%;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 1px;/*線の丸み*/
+}
+.my-info:nth-child(2):after {
+  content: '';
+  position: absolute;
+  left: 12%;
+  top: 19px;/*線の上下位置*/
+  display: inline-block;
+  width: 18%;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 1px;/*線の丸み*/
+}
+.my-info:nth-child(3):after {
+  content: '';
+  position: absolute;
+  left: 20%;
+  top: 19px;/*線の上下位置*/
+  display: inline-block;
+  width: 34%;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 1px;/*線の丸み*/
+}
+.my-info:nth-child(4):after {
+  content: '';
+  position: absolute;
+  left: 21.5%;
+  top: 19px;/*線の上下位置*/
+  display: inline-block;
+  width: 37%;/*線の長さ*/
+  height: 1px;/*線の太さ*/
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);/*位置調整*/
+  background-color: black;/*線の色*/
+  border-radius: 1px;/*線の丸み*/
+}
+.my-info label {
+  text-align: left;
+  letter-spacing: 0.1em;
+}
+.info-box {
+  margin-left: 50px;
+}
+.detail-box {
+  width: 50%;
+  height: 40px;
+  margin-left: 20px;
+  letter-spacing: 0.05em;
+}
+.result-box {
+  width: 40%;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 0%;
+  box-shadow: 5px 5px 10px rgba(0,0,0,.3);
+}
+.detail-box-password {
+  width: 100%;
+  margin-left: 20px;
+}
+.detail-box-password .title-area-button {
+  margin-left: 124px;
+}
