--- a/src/internal/web/template/sharing-from-someone.html
+++ b/src/internal/web/template/sharing-from-someone.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="content-wrapper flex">
-        <div class="content-left-area border-none border-right mt-66">
+        <div class="content-left-area border-none mt-66">
           <p class="ml-30 font-14 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
             <input class="input-calendar" type="date" name="today" id="today-input"/>
@@ -70,7 +70,7 @@
         </div>
 
         <!-- 相手のスケジュールを共有するフォーム -->
-        <div class="index-content-right-area">
+        <div class="sharing-content-right-wrapper">
           <div class="share-form-wrapper">
             <h3 class="text-dimgrey">共有したい相手が発行した番号を入力してください。</h3>
             <p class="text-dimgrey">※有効期限（15分）以内に入力してください。</p>
