--- a/src/internal/web/template/sharing-to-someone.html
+++ b/src/internal/web/template/sharing-to-someone.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="content-wrapper flex">
-        <div class="content-left-area border-none border-right mt-66">
+        <div class="content-left-area border-none mt-66">
           <p class="ml-30 font-14 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
             <input class="input-calendar" type="date" name="today" id="today-input"/>
@@ -71,7 +71,7 @@
 
         <!-- 自身のスケジュールを共有するフォーム -->
 
-        <div class="index-content-right-area">
+        <div class="sharing-content-right-wrapper">
           <div class="share-form-wrapper">
             <h3 class="text-dimgrey">あなたのアカウント情報を入力してください</h3>
             <p class="text-dimgrey">認可後に番号が発行されます：※有効期限15分</p>
