--- a/src/internal/web/static/css/color.css
+++ b/src/internal/web/static/css/color.css
@@ -30,6 +30,10 @@
   background-color: var(--BURLYWOOD);
 }
 
+.bg-wood {
+  background-color: var(--WOOD);
+}
+
 .bg-snow {
   background-color: var(--SNOW);
 }
