--- a/src/internal/web/static/css/account.css
+++ b/src/internal/web/static/css/account.css
@@ -5,24 +5,25 @@
   box-shadow: 7px 7px 20px rgba(0,0,0,.3);
 }
 
-/* icon */
+.error-message-in-account {
+  position: absolute;
+  top: 24%;
+  left: 50%;
+}
+
 #icon-list-display-button {
   border: none;
 }
 #icon-list {
   width: 70%;
-  height: 60vh;
+  height: 70vh;
   position: absolute;
   top: 200px;
-  left: 400px;
+  left: 355px;
   display: none;
   z-index: 10;
 }
-/* #icon-list button,img:hover {
-  cursor: pointer;
-	transform: scale(1.1, 1.1);
-} */
-#icon-list.is-hidden {
+#icon-list.icon-list-is-hidden {
   display: block;
 }
 .icon-list-wrapper {
@@ -43,11 +44,21 @@
 }
 .icon-row {
   width: 100%;
-  height: 50%;
+  height: 30%;
   align-items: center;
 }
 .icon-row button {
   border: none;
+}
+.button-row {
+  width: 100%;
+  height: 20%;
+}
+.button-row:nth-child(1) {
+  margin-top: 30px;
+}
+.button-row:nth-child(2) {
+  margin-bottom: 40px;
 }
 .icon {
   width: 128px;
@@ -59,15 +70,106 @@
 }
 .icon:hover {
 	cursor: pointer;
-	transform: scale(1.15, 1.15);
+	transform: scale(1.3, 1.3);
+}
+.icon.scale {
+  transform: scale(1.3, 1.3);
 }
 .icon-size {
-  width: 131px;
-  height: 131px;
+  width: 132px;
+  height: 132px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+#submit-button {
+  position: relative;
+  width: 220px;
+  height: 60px;
+  margin: 20px 50px 0 0;
+  line-height: 60px;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 3px;
+  position: relative;
+  transition: 0.3s;
+  overflow: hidden;
+  box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 4px 4px 5px 0px rgba(43, 43, 43, 0.3);
+  opacity: 0.9;
+}
+#submit-button::before {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 75%;
+  position: absolute;
+  border-radius: 12px;
+  top: 0;
+  left: 0;
+  background-color: var(--OLDLACE);
+  transition: .3s;
+}
+#submit-button::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 75%;
+  position: absolute;
+  border-radius: 12px;
+  right: 0;
+  background-color: var(--OLDLACE);
+  transition: .3s;
+}
+#submit-button::before {
+  top: 0;
+}
+#submit-button::after {
+  bottom: 0;
+}
+#submit-button:hover::before {
+  transform: translateX(-100%);
+}
+#submit-button:hover::after {
+  transform: translateX(100%);
+}
+
+/* username change form */
+#username-change-form-display-button {
+  border: none;
+}
+#username-change-form {
+  width: 70%;
+  height: 60vh;
+  position: absolute;
+  top: 200px;
+  left: 355px;
+  display: none;
+  z-index: 10;
+}
+#username-change-form.username-change-form-is-hidden {
+  display: block;
+}
+.username-input-wrapper {
+  width: 60%;
+  height: 100%;
+}
+
+/* password change form */
+#password-change-form-display-button {
+  border: none;
+}
+#password-change-form {
+  width: 70%;
+  height: 70vh;
+  position: absolute;
+  top: 200px;
+  left: 355px;
+  display: none;
+  z-index: 10;
+}
+#password-change-form.password-change-form-is-hidden {
+  display: block;
 }
 
 /* account information */
@@ -146,10 +248,10 @@
 .my-info:nth-child(1):after {
   content: '';
   position: absolute;
-  left: 12%;
+  left: 10%;
   top: 19px;/*線の上下位置*/
   display: inline-block;
-  width: 18%;/*線の長さ*/
+  width: 15%;/*線の長さ*/
   height: 1px;/*線の太さ*/
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);/*位置調整*/
@@ -159,10 +261,10 @@
 .my-info:nth-child(2):after {
   content: '';
   position: absolute;
-  left: 12%;
+  left: 10%;
   top: 19px;/*線の上下位置*/
   display: inline-block;
-  width: 18%;/*線の長さ*/
+  width: 15%;/*線の長さ*/
   height: 1px;/*線の太さ*/
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);/*位置調整*/
@@ -172,10 +274,10 @@
 .my-info:nth-child(3):after {
   content: '';
   position: absolute;
-  left: 20%;
+  left: 16.5%;
   top: 19px;/*線の上下位置*/
   display: inline-block;
-  width: 34%;/*線の長さ*/
+  width: 27%;/*線の長さ*/
   height: 1px;/*線の太さ*/
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);/*位置調整*/
@@ -185,10 +287,10 @@
 .my-info:nth-child(4):after {
   content: '';
   position: absolute;
-  left: 21.5%;
+  left: 18%;
   top: 19px;/*線の上下位置*/
   display: inline-block;
-  width: 37%;/*線の長さ*/
+  width: 30%;/*線の長さ*/
   height: 1px;/*線の太さ*/
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);/*位置調整*/
