--- a/src/internal/web/static/css/registration.css
+++ b/src/internal/web/static/css/registration.css
@@ -128,10 +128,12 @@
   -o-transition: box-shadow .5s ease;
   -ms-transition: box-shadow .5s ease;
   transition: box-shadow .5s ease;
+  box-shadow: 2px 2px 10px rgba(0,0,0,.3);
 }
 .input-area ::placeholder {
   color: var(--BLACK);
   font-size: 17px;
+
 }
 .signup-button-area {
   width: 95%;
